fix: 베드당 알림 전송 api IoT 환경에 맞게 수정